Apod
 Changes to be committed:
	modified:   src/main/java/io/github/boogiemonster1o1/legacyfabricbot/LegacyFabricBot.java
	new file:   src/main/java/io/github/boogiemonster1o1/legacyfabricbot/command/ApodCommand.java
	modified:   src/main/java/io/github/boogiemonster1o1/legacyfabricbot/command/CommandManager.java
	modified:   src/main/java/io/github/boogiemonster1o1/legacyfabricbot/config/JanksonConfigManager.java
	new file:   src/main/java/io/github/boogiemonster1o1/legacyfabricbot/object/command/Apod.java
	renamed:    src/main/java/io/github/boogiemonster1o1/legacyfabricbot/object/Config.java -> src/main/java/io/github/boogiemonster1o1/legacyfabricbot/object/config/Config.java
	renamed:    src/main/java/io/github/boogiemonster1o1/legacyfabricbot/object/Tokens.java -> src/main/java/io/github/boogiemonster1o1/legacyfabricbot/object/config/Tokens.java